experience: fix font size for tasks on mobile

--- a/src/components/Experience/experience.module.scss
+++ b/src/components/Experience/experience.module.scss
@@ -2,6 +2,7 @@
 
 .experience {
 	padding: 6rem 0;
+	transition: padding 0.5s ease-in-out;
 
 	@include breakpoint(tablet-sm) {
 		padding: 2.5rem 0;
@@ -20,6 +21,7 @@
 			margin-top: 3rem;
 			padding-top: 1rem;
 			padding-bottom: 1rem;
+			transition: padding-left 0.5s ease-in-out, margin-top 0.5s ease-in-out;
 
 			@include breakpoint(tablet-md) {
 				padding-left: 2rem;
@@ -44,9 +46,14 @@
 			.experienceCard {
 				position: relative;
 				margin-bottom: 3rem;
+				transition: margin-bottom 0.5s ease-in-out;
 
 				@include breakpoint(tablet-md) {
 					margin-bottom: 2rem;
+				}
+
+				@include breakpoint(mobile-lg) {
+					margin-bottom: 1rem;
 				}
 
 				&:last-child {
@@ -61,7 +68,8 @@
 					top: 6px;
 					left: calc(-4rem - 6px);
 					border-radius: 100%;
-					transition: background-color 0.5s ease-in-out, border 0.5s ease-in-out;
+					transition: background-color 0.5s ease-in-out, border 0.5s ease-in-out,
+						left 0.5s ease-in-out;
 
 					@include theme {
 						background-color: themedColor(background);
@@ -84,6 +92,7 @@
 				.experienceDetails {
 					display: flex;
 					justify-content: space-between;
+					transition: flex-direction 0.5s ease-in-out;
 
 					@include breakpoint(tablet-md) {
 						flex-direction: column;
@@ -109,19 +118,21 @@
 				}
 
 				.tasks {
-					padding-left: 2rem;
+					padding-left: 1.5rem;
 					margin-top: 1rem;
 					display: flex;
 					flex-direction: column;
+					transition: margin-top 0.5s ease-in-out;
 
 					@include breakpoint(tablet-md) {
 						margin-top: 0.5rem;
 					}
 
 					.task {
-						margin: 0.3rem 0;
+						margin: 0.2rem 0;
 						position: relative;
 						width: 60%;
+						transition: width 0.5s ease-in-out;
 
 						@include breakpoint(laptop-md) {
 							width: 80%;
@@ -139,19 +150,24 @@
 							@extend %paragraph;
 							position: relative;
 							line-height: 1.6rem;
+							transition: font-size 0.5s ease-in-out;
+
+							@include breakpoint(mobile-lg) {
+								font-size: size(s14);
+							}
 
 							&:before {
 								content: '';
 								position: absolute;
-								width: 12px;
-								height: 3px;
+								width: 10px;
+								height: 2px;
 								top: 12px;
 								left: -20px;
 								border-radius: 5px;
 								transition: background-color 0.5s ease-in-out;
 
 								@include theme {
-									background-color: themedColor(textMuted);
+									background-color: themedColor(listIcon);
 								}
 							}
 
